--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>
     <b> sorro </b>
 </p>
-<!-- <img src="imagen.PNG" alt="mi cuenta de tik tok"> -->
+<img src="imagen.PNG" alt="mi cuenta de tik tok">
 
 
 
